Containerization and Orchestration/walkthrough/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workshop-backend-deployment
  labels:
    app: workshop-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: workshop-backend
  template:
    metadata:
      labels:
        app: workshop-backend
    spec:
      containers:
      - name: workshop-backend
        image: ricardomiguel/ws-be:k8s
        ports:
        - containerPort: 5000
