Containerization and Orchestration/walkthrough/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: workshop-backend-service
spec:
  selector:
    app: workshop-backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
